--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"marked": "^9.1.0",
 		"next": "^13.4.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.10",
 		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.31",
 		"prettier": "^3.0.3",
