--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-	"name": "next-reviews",
-	"private": true,
-	"scripts": {
-		"build": "next build",
-		"dev": "next dev",
-		"start": "next start"
-	},
-	"dependencies": {
-		"marked": "^9.1.0",
-		"next": "^13.4.2",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
-	},
-	"devDependencies": {
-		"@tailwindcss/typography": "^0.5.10",
-		"autoprefixer": "^10.4.16",
-		"postcss": "^8.4.31",
-		"prettier": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.5.5",
-		"tailwindcss": "^3.3.3"
-	}
+  "name": "next-reviews",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "start": "next start"
+  },
+  "dependencies": {
+    "gray-matter": "^4.0.3",
+    "marked": "^9.1.0",
+    "next": "^13.4.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.5",
+    "tailwindcss": "^3.3.3"
+  }
 }
